@@ -1,5 +1,5 @@
-<link rel="stylesheet" type="text/css" href="/minify/css/thoth.css" />
+<link rel="stylesheet" type="text/css" href="/css/thoth.css" />
 
 <% if check_auth %>
-  <link rel="stylesheet" type="text/css" href="/minify/css/admin.css" />
+  <link rel="stylesheet" type="text/css" href="/css/admin.css" />
 <% end %>
