@@ -1,2 +1,2 @@
 <script type="text/javascript" src="http://yui.yahooapis.com/2.5.1/build/yahoo-dom-event/yahoo-dom-event.js"></script>
-<script type="text/javascript" src="/minify/js/thoth.js"></script>
+<script type="text/javascript" src="/js/thoth.js"></script>
