@@ -7,6 +7,8 @@ Version 0.2.0 (?)
   * Views are now compiled by default in production mode, which improves
     performance significantly. To disable view compilation, set
     server.compile_views to false.
+  * Added server.enable_minify setting. When enabled, all CSS under /css and all
+    JavaScript under /js will be minified on the fly.
   * Fixed incorrect default paths for the theme.public, theme.view, and media
     config settings.
 
